# tilstat-data

./: .gitignore  pyproject.toml  readme.md
data-lab/: requirements.txt
data-lab/test-in-laib/: TilStat merger.ipynb  Tilstat scraper v1 (grad uniche).ipynb  Tilstat scraper v2 (grad per corso ingegneria).ipynb  course-equivalence.csv
data-lab/test-in-laib/datasets/: courses.json
src/: TilStat merger.ipynb  tilstat.json  tilstathof.json
src/.ipynb_checkpoints/: TilStat merger-checkpoint.ipynb  Tilstat scraper 17-18 20-21-checkpoint.ipynb  Tilstat scraper 21-22-checkpoint.ipynb
src/common_constants/: course.py
src/til/: TilStat merger.ipynb  Tilstat scraper 17-18 20-21.ipynb  Tilstat scraper 21-22.ipynb  course-equivalence.csv
webapp/: .env.development  .env.production  package-lock.json  package.json
webapp/public/: index.html  manifest.json
webapp/src/: app.js  global.css  index.js  upper-navbar.js
webapp/src/data/: courses.json  tilstat.json
webapp/src/pages/: cookie-banner.js  single-course-graph.js  synoptic.js
