[tool.poetry]
name = "tilstata_data"
version = "0.1.0"
description = ""
authors = ["Massimo Rebuglio <massimo.rebuglio@polito.it>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
pandas = "^1.4.1"
numpy = "^1.22.3"
tqdm = "^4.63.0"
requests = "^2.31.0"
pymongo = "^4.5.0"
unidecode = "^1.3.6"
thefuzz = "^0.20.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
